Updated AI fraud detection and backend modules